wk_taa_taaqa/src/objects/Risk_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Likelihood__c</fullName>
        <inlineHelpText>For Risks only: likelihood that this risk will occur and turn into an Issue.</inlineHelpText>
        <label>Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mitigation_Plan__c</fullName>
        <inlineHelpText>Mitigation Plan for Risks; Actions to Resolve for Issues.</inlineHelpText>
        <label>Mitigation Plan / Actions to Resolve</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Request</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Risks/Issues</relationshipLabel>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Due_Date__c</fullName>
        <label>Resolution Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Issue_Description__c</fullName>
        <label>Risk/Issue Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk/Issue</label>
    <nameField>
        <displayFormat>R/I-{0000}</displayFormat>
        <label>Issues and Risks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks/Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>